# dynata-sig-py

./: .gitignore  README.md  pyproject.toml
src/dynata_sig/: __init__.py  canonicalize.py  signer.py
tests/: test_signature.py  test_signing_string.py
