[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dynata-sig-py"
version = "1.0.0"
description = "Dynata signing-string and signature primitives for Python."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Dynata" }]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
